--- a/index.html
+++ b/index.html
@@ -834,6 +834,26 @@
         </div>
     </div>
 
+    <!-- Member Details Modal -->
+    <div id="memberDetailsModal" style="display:none; position:fixed; top:0; left:0; right:0; bottom:0; background:rgba(0,0,0,0.5); z-index:1000; padding:20px;">
+        <div style="background:var(--color-surface); max-width:500px; margin:50px auto; padding:24px; border-radius:12px; max-height:90vh; overflow-y:auto;">
+            <h2 id="memberDetailsName"></h2>
+            <div class="stats mt-16">
+                <div class="stat-box success">
+                    <h3>Total Paid</h3>
+                    <div class="value" id="memberTotalPaid">₹0</div>
+                </div>
+                <div class="stat-box error">
+                    <h3>Total Due</h3>
+                    <div class="value" id="memberTotalDue">₹0</div>
+                </div>
+            </div>
+            <h3 class="mt-16">Unpaid Months</h3>
+            <ul id="memberUnpaidMonths" style="list-style:none; padding:0; margin-top:8px;"></ul>
+            <button type="button" class="btn btn-secondary mt-16" onclick="hideMemberDetails()">Close</button>
+        </div>
+    </div>
+
     <script>
 
         let members = [];
@@ -959,8 +979,7 @@
                         }
                     </td>
                     <td>${member.flat}</td>
-                    <td>${member.name}</td>
-                    <td>₹${member.fee}</td>
+                    <td><a href="#" onclick="showMemberDetails(${member.id}); return false;">${member.name}</a></td>
                     <td>${formatDate(member.join)}</td>
                     <td><span class="badge badge-success">Active</span></td>
                     <td>
@@ -1455,6 +1474,58 @@
         document.getElementById('newJoinDate').value = new Date().toISOString().split('T')[0];
         document.getElementById('reportFrom').value = '2025-04';
         document.getElementById('reportTo').value = '2025-11';
+
+        function hideMemberDetails() {
+            document.getElementById('memberDetailsModal').style.display = 'none';
+        }
+
+        async function showMemberDetails(memberId) {
+            const member = members.find(m => m.id === memberId);
+            if (!member) return;
+
+            document.getElementById('memberDetailsName').textContent = `${member.name} (${member.flat})`;
+
+            const memberPayments = payments.filter(p => p.memberId === memberId);
+            const totalPaid = memberPayments.reduce((sum, p) => sum + p.amount, 0);
+
+            // Calculate total expected payment up to the current month
+            const joinDate = new Date(member.join);
+            const today = new Date();
+            let totalExpected = 0;
+            let currentDate = new Date(joinDate);
+
+            while (currentDate <= today) {
+                totalExpected += member.fee;
+                currentDate.setMonth(currentDate.getMonth() + 1);
+            }
+
+            const totalDue = totalExpected - totalPaid;
+
+            document.getElementById('memberTotalPaid').textContent = '₹' + totalPaid.toLocaleString();
+            document.getElementById('memberTotalDue').textContent = '₹' + totalDue.toLocaleString();
+
+            const unpaidMonthsList = document.getElementById('memberUnpaidMonths');
+            unpaidMonthsList.innerHTML = '';
+
+            const currentMonthString = today.getFullYear() + '-' + String(today.getMonth() + 1).padStart(2, '0');
+            const unpaidMonths = getUnpaidMonths(memberId, currentMonthString);
+
+            if (unpaidMonths.length > 0) {
+                unpaidMonths.forEach(month => {
+                    const li = document.createElement('li');
+                    li.textContent = month;
+                    li.style.color = 'var(--color-error)';
+                    unpaidMonthsList.appendChild(li);
+                });
+            } else {
+                const li = document.createElement('li');
+                li.textContent = 'No unpaid months.';
+                li.style.color = 'var(--color-success)';
+                unpaidMonthsList.appendChild(li);
+            }
+
+            document.getElementById('memberDetailsModal').style.display = 'block';
+        }
 
         // Initialize app: try server first, then fall back to localStorage
         async function initApp() {
